// Vitest Snapshot v1

exports[`button > should render additional classNames 1`] = `
<button
  class="absolute bg-orange-500 focus:bg-orange-700 hover:bg-orange-700 focus:ring-orange-500 text-white px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;

exports[`button > should render primary button 1`] = `
<button
  class="bg-orange-500 focus:bg-orange-700 hover:bg-orange-700 focus:ring-orange-500 text-white px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;

exports[`button > should render red button 1`] = `
<button
  class="bg-rose-500 focus:bg-rose-700 hover:bg-rose-700 focus:ring-rose-500 text-white px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;

exports[`button > should render red outline button 1`] = `
<button
  class="bg-rose-500/20 focus:bg-rose-500 hover:bg-rose-500 focus:ring-rose-500 text-rose-500 hover:text-white focus:text-white px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;

exports[`button > should render secondary button 1`] = `
<button
  class="bg-orange-100 focus:bg-orange-200 hover:bg-orange-200 focus:ring-orange-500 text-orange-500 px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;

exports[`link button > should render additional classNames 1`] = `
<button
  class="absolute bg-orange-500 focus:bg-orange-700 hover:bg-orange-700 focus:ring-orange-500 text-white px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;

exports[`link button > should render primary button 1`] = `
<button
  class="bg-orange-500 focus:bg-orange-700 hover:bg-orange-700 focus:ring-orange-500 text-white px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;

exports[`link button > should render red button 1`] = `
<button
  class="bg-rose-500 focus:bg-rose-700 hover:bg-rose-700 focus:ring-rose-500 text-white px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;

exports[`link button > should render secondary button 1`] = `
<button
  class="bg-orange-100 focus:bg-orange-200 hover:bg-orange-200 focus:ring-orange-500 text-orange-500 px-6 py-2 sm:py-3 sm:px-8 rounded-md border border-transparent  text-base font-medium ring-offset-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 "
>
  Click
</button>
`;
